# bitperm

./: .gitignore  .tmux_envrc  Cargo.toml  README.md  path_benchmark.rs
benches/: bit_benchmark.rs  bitgrid8.rs  bitlib.rs  factorial_benchmark.rs  group_benchmark.rs
src/: _size4.pyx  bitcube.rs  bitcube3.rs  bitcube4.rs  bitcube8.rs  bitgrid8.rs  bithex8.rs  bitlib.rs  bitmatrix8.rs  bitpara8.rs  bitperm.rs  bitperm4.rs  bitperm5.rs  bitrhombdo4.rs  bittroc4.rs  bittroc4_full.rs  convert.rs  grid8x8.rs  lib.rs  origin_bitgrid8.rs  pack_bitgrid8.rs  piece_bitgrid8.rs
src/traits/: lattice_cubic_simple.rs  mod.rs
