[package]
name = "bitperm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
flowscad = "0.1.2"
# bitman = "2.0.1"
# criterion = "0.5.1"
# iterator = "0.1.0"
nonzero = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bit_benchmark"
harness = false
