[package]
name = "bitperm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
arrayvec = "0.7.6"
derive_more = { version = "2.0.1", features = ["add", "add_assign", "from", "mul", "mul_assign"] }
flowscad = "0.1.2"
nonzero = "0.2.0"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bit_benchmark"
harness = false
